# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODOS  main.c  minishell
headers/: color.h  libft.h  minishell.h
libraries/libft/: Makefile  ft_append.c  ft_append_element.c  ft_atoi.c  ft_atol.c  ft_contains.c  ft_count.c  ft_fflush.c  ft_find.c  ft_free2D.c  ft_gnl.c  ft_insert.c  ft_is_int.c  ft_is_num.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstlast.c  ft_lstnew.c  ft_lstrmv_if.c  ft_lstsize.c  ft_memcpy.c  ft_onlythischar.c  ft_printf.c  ft_putnbr.c  ft_remove_at.c  ft_replace.c  ft_split.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strjoin2D.c  ft_strlcpy.c  ft_strlen.c  ft_strmaxjoin.c  libft.h
sources/: command.c  configure.c  env_utils.c  execute.c  executor.c  expand_utils.c  expander.c  handle_assign.c  handle_cd.c  handle_echo.c  handle_env.c  handle_exit.c  handle_export.c  handle_keys.c  handle_pwd.c  handle_unset.c  here_doc_utils.c  history.c  input.c  key.c  minishell.c  more_handle_keys.c  parse_utils.c  parser.c  priorities.c  quote.c  redirections.c  safe_split.c  signals.c  utils.c  wildcards.c  wildcards_utils.c
